# Stefans-Blog

./: .gitignore  CHANGES.md  LICENSE  README.md  add_post.py  api.yaml  openapi-python-client-config.yaml  pyproject.toml  requirements.txt  setup.bat  test_end_to_end.py
.github/workflows/: ci.yaml
Client/: README.md  setup.py
Client/sos_client/: client_util.py  constants.py  manager.py  manager_service.py  manifest.py  post_meta.py  util.py
ImageCropper/: setup.py
ImageCropper/imagecropper/: cropper.py
blog-util/: add_post.py
example-post/: post-meta.json  post.md
flaskr/: .flaskenv  __init__.py  api.py  api.yaml  auth.py  blog.py  cli.py  config.py  database.py  database_context.py  defaults.py  email_provider.py  featured_posts.py  file_manager.py  image_validator.py  manage_blog.py  manage_util.py  manifest.py  markdown.py  models.py  post_adder.py  post_manager.py  post_uploader.py  posts_schema.sql  site_config.py  site_logger.py  util.py  views.py
flaskr/api/: commands_api.py  constants.py  email_api.py  emails_api.py  featured.py  featured_api.py  images.py  (+8 more)
image-cropper/: image_cropper.py
imagecropper/: setup.py
renderer/: example.html  example.md  setup.py  test_rendering.py
scripts/: reset-local-site.bat  setup-flask.bat
sitemanager/: cli.py  manager.py  manager_service.py  managerservice.py  manifest.py  markdown.py  post.py  postconfig.py  setup.py  testapi.py  util.py
stefan-on-software/: MANIFEST.in  README.md  setup.cfg
stefan-on-software-api-client/: README.md  pyproject.toml  setup.cfg
stefan-on-software-api-client/stefan_on_software_api_client/: __init__.py  client_util.py
stefan-on-software-api-client/stefan_on_software_api_client/api/commands/: post_commands_feature.py  post_commands_publish.py  post_commands_unfeature.py  post_commands_unpublish.py
stefan-on-software-api-client/stefan_on_software_api_client/api/emails/: post_registrations.py
stefan-on-software-api-client/stefan_on_software_api_client/api/files/: delete_files_file_id.py  get_files.py  get_files_file_id.py  get_files_file_id_metadata.py  post_files.py
stefan-on-software-api-client/stefan_on_software_api_client/api/posts/: delete_posts_post_id.py  delete_posts_post_id_tags_tag.py  get_posts.py  get_posts_post_id.py  get_posts_post_id_content.py  get_posts_post_id_tags.py  post_posts.py  post_posts_post_id_content.py  post_posts_post_id_tags.py  put_posts_post_id.py
stefan-on-software-api-client/stefan_on_software_api_client/api/tags/: delete_tags_tag.py  get_tags.py  get_tags_tag.py  post_tags.py  put_tags_tag.py
stefan-on-software-api-client/stefan_on_software_api_client/models/: __init__.py  file.py  file_filetype.py  post.py  post_commands_feature_json_body.py  post_commands_publish_json_body.py  post_commands_unfeature_json_body.py  post_commands_unpublish_json_body.py  post_files_multipart_data.py  post_posts_json_body.py  post_posts_post_id_content_multipart_data.py  post_posts_post_id_tags_json_body.py  post_tags_json_body.py  put_posts_post_id_json_body.py  put_tags_tag_json_body.py  tag.py  user.py
stefan-on-software-renderer/: MANIFEST.in  README.md  setup.cfg
stefan-on-software-renderer/stefan_on_software_renderer/: renderer.py
stefan-on-software-renderer/stefan_on_software_renderer/test/: test_renderer.py
stefan-on-software/flaskr/: auth.py  email_provider.py  file_manager.py  site_logger.py
stefan-on-software/flaskr/api/: files_api.py  posts_api.py
stefan-on-software/flaskr/contracts/: add_tag.py  data_schemas.py  update_tag.py
stefan-on-software/flaskr/models/: relations.py  tag.py
stefan-on-software/flaskr/templates/blog/: about.html  posts.html  search.html
stefan-on-software/flaskr/test/: conftest.py  example_file.txt  test_auth.py  test_tags_api.py
stefan-on-software/flaskr/views/: public_views.py
stefan-on-software/stefan_on_software/: __init__.py  auth.py  cli.py  defaults.py  email_provider.py  file_manager.py  image_validator.py  post_manager.py  site_config.py  site_logger.py  sitemap.py  sitemapper.py
stefan-on-software/stefan_on_software/api/: commands_api.py  emails_api.py  files_api.py  posts_api.py  tags_api.py
stefan-on-software/stefan_on_software/contracts/: constants.py  create_post.py  create_tag.py  publish_post.py  update_post.py  update_tag.py
stefan-on-software/stefan_on_software/models/: file.py  post.py  relations.py  tag.py  user.py
stefan-on-software/stefan_on_software/static/: style.css
stefan-on-software/stefan_on_software/templates/blog/: 404.html  about.html  banner.html  base_template.html  changelog.html  footer.html  index.html  login.html  macros.html  navbar.html  portfolio.html  post.html  posts.html  posts_carousel.html  register_email.html  search.html  sitemap.xml  tag_view.html
stefan-on-software/stefan_on_software/templates/email/: base_template.html  footer.html  header.html  new_post_email.html  style.css  welcome_email.html
stefan-on-software/stefan_on_software/templates/macros/: post_widget.html  posts_carousel.html  tag_widget.html
stefan-on-software/stefan_on_software/test/: conftest.py  test_auth.py  test_commands_api.py  test_files_api.py  test_posts_api.py  test_sitemap.py  test_tags_api.py  test_util.py
stefan-on-software/stefan_on_software/views/: page_metadata.py  public_views.py
tk-image-cropper/: README.md  setup.cfg
tk-image-cropper/tk_image_cropper/: image_cropper.py
(+78 files in other folders)
