[metadata]
name = stefan_on_software_api_client
version = 0.2.0
author = Stefan Kussmaul
author_email = stefan@stefanonsoftware.com
description = A client and utilities for managing the StefanOnSoftware website.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Stefan4472/Stefans-Blog
keywords = flask, website, blog
python_requires = >=3.9
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
    click>=8.1.3
    marshmallow>=3.14.1
    stefan-on-software-renderer>=0.1.0
    stefansearch==0.9.1
    tk-image-cropper>=0.1.0


