[metadata]
name = stefan_on_software_renderer
version = 0.1.0
author = Stefan Kussmaul
author_email = stefan@stefanonsoftware.com
description = A simple program that can render Markdown that includes custom XML tags.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Stefan4472/Stefans-Blog
keywords = markdown
python_requires = >=3.6
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
    markdown2==2.4.2
    pygments==2.10.0
    beautifulsoup4==4.10.0


