[metadata]
name = stefan_on_software
version = 0.2.0
author = Stefan Kussmaul
author_email = stefan@stefanonsoftware.com
description = A blogging website written using Flask.
;long_description = file: README.md
;long_description_content_type = text/markdown
url = https://github.com/Stefan4472/Stefans-Blog
keywords = flask, website, blog
python_requires = >=3.10
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
    stefansearch==0.9.1
    click==8.1.3
    dataclasses==0.6
    Flask==1.1.2
    Flask-Login==0.5.0
    Flask-SQLAlchemy==2.5.1
    Pillow==9.0.1
    randomcolor==0.4.4.5
    sib-api-v3-sdk==7.5.0
    SQLAlchemy==1.4.22
    stefan-on-software-renderer==0.1.0
    marshmallow==3.14.1
    markdown2==2.4.2

