[metadata]
name = stefan_on_software
version = 0.2.0
author = Stefan Kussmaul
author_email = stefan@stefanonsoftware.com
description = A blogging website written using Flask.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Stefan4472/Stefans-Blog
keywords = flask, website, blog
python_requires = >=3.9
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
    Flask>=1.1.2
    Flask-Login>=0.5.0
    Flask-SQLAlchemy>=2.5.1
    lxml==4.9.2
;    TODO: upgrade
    markdown2>=2.4.2
    marshmallow>=3.14.1
    Pillow>=9.3.0
    randomcolor>=0.4.4.5
    requests>=2.25.1
    sib-api-v3-sdk>=7.5.0
    stefan-on-software-renderer>=0.1.0
    stefansearch==0.9.1


