[metadata]
name = tk-image-cropper
version = 0.1.0
author = Stefan Kussmaul
author_email = stefan@stefanonsoftware.com
description = A simple program that uses a Tkinter GUI to crop an image to specified dimensions.
long_description = file: README.md
url = https://github.com/Stefan4472/Stefans-Blog
keywords = tkinter, image, cropping
python_requires = >=3.6
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    Pillow


