[metadata]
name = tk-image-cropper
version = 0.1.0
author = Stefan Kussmaul
author_email = stefan@stefanonsoftware.com
description = A simple program that uses a Tkinter GUI to crop an image to specified dimensions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Stefan4472/Stefans-Blog
keywords = tkinter, image, cropping
python_requires = >=3.6
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    Pillow>=9.3.0




anyio==3.6.2
attrs==22.2.0
beautifulsoup4==4.10.0
certifi==2022.12.7
charset-normalizer==3.0.1
click==8.1.3
colorama==0.4.6
Flask==2.2.2
Flask-Login==0.6.2
Flask-SQLAlchemy==3.0.2
greenlet==2.0.1
h11==0.14.0
httpcore==0.16.3
httpx==0.23.3
idna==3.4
importlib-metadata==6.0.0
itsdangerous==2.1.2
Jinja2==3.1.2
markdown2==2.4.2
MarkupSafe==2.1.2
marshmallow==3.19.0
packaging==23.0
Pillow==9.4.0
Pygments==2.10.0
python-dateutil==2.8.2
randomcolor==0.4.4.6
requests==2.28.2
rfc3986==1.5.0
sib-api-v3-sdk==7.5.0
six==1.16.0
sniffio==1.3.0
soupsieve==2.3.2.post1
SQLAlchemy==1.4.46
stefan-on-software @ file:///C:/Users/Stefan/Github/Stefans-Blog/stefan-on-software
stefan-on-software-api-client @ file:///C:/Users/Stefan/Github/Stefans-Blog/stefan-on-software-api-client
stefan-on-software-renderer==0.1.0
stefansearch==0.9.1
tk-image-cropper==0.1.0
urllib3==1.26.14
Werkzeug==2.2.2
zipp==3.11.0

